--- a/eth-cam.yaml
+++ b/eth-cam.yaml
@@ -8,6 +8,13 @@ esp32:
     type: arduino
     version: 2.0.8
 
+api:
+#  encryption:
+#    key: "generate key here https://esphome.io/components/api"
+
+ota:
+#  password: "ota password"
+
 # Enable logging
 logger: 
   level: VERY_VERBOSE
