--- a/eth-cam.yaml
+++ b/eth-cam.yaml
@@ -21,6 +21,7 @@ api:
 #  encryption:
 #    key: "generate key here https://esphome.io/components/api"
 ota:
+  - platform: esphome
 #  password: "ota password"
 
 
